--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "koa-body": "^4.2.0",
     "koa-pug": "^4.0.4",
     "koa-router": "^9.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
